Does not try to anchor ChooserBubble when browser is fullscreen

Bug: 749410
Change-Id: Ib52dd0ef4d01c1b0228c0af8cbea16184a631692